# C_Socket

./: .gitignore  CMakeLists.txt
include/: client.h  configuration.h  keyValueStore.h  main.h  server.h  subroutines.h
src/: client.c  configuration.c  keyValueStore.c  main.c  server.c  subroutines.c
test/: minunit_example.c  subroutinesTest.c
